--- a/ch_results_conclusions.tex
+++ b/ch_results_conclusions.tex
@@ -130,28 +130,31 @@ The algorithm was very inefficient in this aspect where the misclassification ha
 
 Yet this low score was not seen in other metrics evaluated. 
 For \cref{target2} both the best $Recall$ and $Accuracy$ test and CV rates were all over $0.61\%$. 
-The best-fit $C$ values were not consistent along all fits as the values differed in orders of magnitude, where they ranged from to $1E-3$ to $1E-1$.
+The best-fit $C$ values were not consistent along all fits as the values differed in orders of magnitude.
+Solutions ranged from to $1E-3$ to $1E-1$ on different fits.
 With this we can still positively affirm that the best-fit models for this experiment were those which penalized the loss function with strong regularization terms.
 
 
 On the other hand, when using this classifier to solve \cref{target1}, we find that we can attain a $ROC AUC$ score of $0.76\%$. 
 And this score is achieved when cross validating solely on the $l1$ regularization parameter. 
-A similar test score of $0.744\%$ was 
-Both of these two procedures had best fits on the more regularized $C$values.
-These better scores, when compared over the previous ones, show the differene in problem difficulty.
-From the skewed class balance persepective, we confirm our hypothesis about long-term migrations, that this is a harder problem to solve.
+A similar test score of $0.744\%$ was reached when optimizing for the $l2$ hyperparameter of regularization.
+Each were optimized separately in order to exmplify how the overall $ROC AUC$ varied along different regularization thresholds.
+
+Overall, both procedures had best fits on the more regularized $C$values.
+And these better $ROC AUC$ scores, when compared with the experiments on \cref{target1}, underscore the problems difference in difficulty.
+From the skewed class balance perspective, we confirm our hypothesis about long-term migrations, that this is a harder problem to solve.
 
 
-These previous results outline a complete overview of the Machine Learning toolset we used to evaluate the classifiers
-used to tackle long-term migrations predictions.
+The previous results outline a complete systematical Machine Learning approach and toolset used to evaluate the long-term migrations prediction problem. 
+In this way we provide a methodical way to analyze classifiers perfroming on this problem.
+With this we tackled the task with the introduction of new algorithms in the following chapters.
 
 
-% their na
-% similar c 
-% We also gave details on the concept
-% Along the way we 
 
-% In \cref{ch:machineLearning,ch:modelSelection}, 
+In\cref{ch:ensembleMethods} we introduce four new classifiers along with their properties and characteristics.
+
+% For each, we presented an introductory review and pointed the reader to further readings where needed.
+
 
 
 
@@ -177,12 +180,6 @@ Expand, correct and finish them in a cohesive structure.}
 
 
 
-
-
-
-
-In \cref{ch:machineLearning,ch:modelSelection,ch:ensembleMethods}, we introduced and evaluated a systematic process that tackles the problem of predicting long-term migrations.
-As a start, we wrote an introductory review for a list of supervised classification algorithms.
 
 Then, through a number of experiments, we demonstrated how the supervised classification models performed across different prediction tasks.
 For each model, we tried to draw the greatest prediction performance from the features extracted from the dataset.
@@ -220,9 +217,10 @@ Combining social and geolocated information, the data at hand has been given an 
 
 
 
-Epidemic counter-measures nowadays include setting national surveillance systems, vector-centered policy interventions and individual screenings of people
-These measures require costly infrastructures to set up and be run
-However, systems built on top of existing mobile networks would demand lower costs, taking advantage of the already available infrastructure
+Currently, epidemic counter-measures include coordinating national surveillance systems with institutions and primary healthcare organizations, vector-centered policy interventions through fumigation of vector-infested regions and individual in-field screening of people.
+
+These measures require costly infrastructures to set up and be run.
+On the other hand, this work shows built on top of existing mobile networks would demand lower costs, taking advantage of the already available infrastructure
 The potential value these results could add to health research is hereby exposed.
 Finally, the results stand as a proof of concept which can be extended to other countries or to diseases with similar characteristics.
 
