rewording/enlargment of drawbacks section

--- a/ch_ensemble_methods.tex
+++ b/ch_ensemble_methods.tex
@@ -1119,7 +1119,7 @@ Top features are related to the vulnerability and to the users mobility
 
 
 
-\section{Benchmark Classifier: Naive Bayes}\label{sec:naive_bayes}
+\section{Benchmark Classifier: Naive Bayes}\label{section:naive_bayes}
 
 The Naive Bayes model encompasses a group of simple and computationally efficient algorithms which are built with a strong statistical assumption of independence among the features.
 Even though this belief is in practice wrong, the model still achieves acceptable classification rates for some problems.
