--- a/ch_results_conclusions.tex
+++ b/ch_results_conclusions.tex
@@ -273,7 +273,7 @@ Migration patterns can then be used to suggest actual epidemic spread of this di
 
 
 
-\section{Drawbacks on the methodology}
+\section{Drawbacks from our methodology}
 
 There are several points can be stated to point to weak spots on the methodology used.
 An important observation is that we can not directly jump from the human mobility insights found in this study, to conclusions from a model of disease spread. 
